@@ -3,8 +3,8 @@ Section: x11
 Priority: optional
 Maintainer: Elmar S. Heeb <elmar@heebs.ch>
 Uploaders: Axel Beckert <abe@debian.org>
-Build-Depends: debhelper (>= 5), autotools-dev, libxaw7-dev
-Standards-Version: 3.9.2
+Build-Depends: debhelper (>= 5), autotools-dev, libxaw7-dev, dpkg-dev (>= 1.16.1~)
+Standards-Version: 3.9.3
 Homepage: http://www.nongnu.org/autocutsel/
 VCS-Git: git://github.com/elmar/autocutsel-debian.git
 VCS-Browser: https://github.com/elmar/autocutsel-debian
